--- a/src/main/resources/css/modal.css
+++ b/src/main/resources/css/modal.css
@@ -1,13 +1,14 @@
 .modal {
-    -fx-border-color: #089de3;
+    -fx-border-color: -fx-dark;
     -fx-border-width: 2px;
     -fx-background-color: white;
     -fx-text-fill: black;
 }
 
 .hbox {
-    -fx-background-color: #089de3;
+    -fx-background-color: -fx-dark;
 }
+
 #title {
     -fx-font-size: x-large;
     -fx-text-fill: white;
@@ -36,7 +37,7 @@
 
 /* SIP creator modal*/
 .sipcreator {
-    -fx-border-color: #089de3;
+    -fx-border-color: -fx-dark;
     -fx-border-width: 2px;
     -fx-background-color: white;
     -fx-text-fill: black;
@@ -48,16 +49,16 @@
 }
 
 .sipcreator .progress-bar > .bar {
-    -fx-background-color: #089de3;
+    -fx-background-color: -fx-light;
     -fx-border-width: 2px;
 }
 
 /* List-view */
-.list-view{
+.list-view {
     -fx-background-color: white;
 }
 
-.list-cell{
+.list-cell {
     -fx-padding: 5px;
     -fx-background-color: white;
 }
@@ -101,22 +102,22 @@
 }
 
 /* Combo-box */
-.list-cell:focused .combo-box{
+.list-cell:focused .combo-box {
     -fx-background-color: lightgray;
 }
 
-.list-cell:focused .combo-box-base .list-cell{
+.list-cell:focused .combo-box-base .list-cell {
     -fx-background-color: lightgray;
 }
 
-.list-cell:focused .combo-box .list-view .list-cell{
+.list-cell:focused .combo-box .list-view .list-cell {
     -fx-background-color: white;
 }
 
-.list-cell:focused .combo-box .list-view .list-cell:selected{
+.list-cell:focused .combo-box .list-view .list-cell:selected {
     -fx-background-color: darkgray;
 }
 
-.list-cell:focused .combo-box .list-view .list-cell:hover{
+.list-cell:focused .combo-box .list-view .list-cell:hover {
     -fx-background-color: lightgray;
 }
