--- a/src/main/resources/css/modal.css
+++ b/src/main/resources/css/modal.css
@@ -10,13 +10,13 @@
 }
 
 #title {
-    -fx-font-size: x-large;
+    -fx-font-size: large;
     -fx-text-fill: white;
     -fx-font-weight: bold;
 }
 
 .modal #sub-title {
-    -fx-font-size: x-large;
+    -fx-font-size: large;
     -fx-font-weight: bold;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .sipcreator .progress-bar > .bar {
-    -fx-background-color: -fx-light;
+    -fx-background-color: -fx-medium;
     -fx-border-width: 2px;
 }
 
@@ -64,7 +64,7 @@
 }
 
 .list-cell:focused {
-    -fx-background-color: lightgray;
+    -fx-background-color: -fx-alt-light;
 }
 
 .list-view *.scroll-bar:horizontal *.increment-button,
@@ -101,23 +101,7 @@
     -fx-shape: null;
 }
 
-/* Combo-box */
-.list-cell:focused .combo-box {
-    -fx-background-color: lightgray;
-}
-
-.list-cell:focused .combo-box-base .list-cell {
-    -fx-background-color: lightgray;
-}
-
-.list-cell:focused .combo-box .list-view .list-cell {
-    -fx-background-color: white;
-}
-
-.list-cell:focused .combo-box .list-view .list-cell:selected {
-    -fx-background-color: darkgray;
-}
-
-.list-cell:focused .combo-box .list-view .list-cell:hover {
-    -fx-background-color: lightgray;
+/*Combo-box */
+.list-cell .combo-box {
+    -fx-border-color: -fx-dark;
 }
