Updated the colors of the app

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -1,6 +1,6 @@
 * {
-    -fx-dark: #44749D;
-    -fx-medium: #6995B9;
+    -fx-dark: #089de3;
+    -fx-medium: #5bbeff;
     -fx-light: #9CBFD9;
     -fx-alt-dark: #9DA4A9;
     -fx-alt-light: #D3D7DA;
