--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -174,6 +174,10 @@
     -fx-strikethrough: true;
 }
 
+.main-tree {
+    -fx-border-color: -fx-dark;
+}
+
 /* Schema */
 .schemaNode .cellText {
     -fx-opacity: 85%;
