--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -18,6 +18,11 @@
     -fx-background-color: #d8d8d8;
 }
 
+#footer-split-pane *.split-pane-divider {
+    -fx-padding: 0;
+    -fx-background-color: transparent;
+}
+
 /* Inspection */
 .inspectionPart {
     -fx-border-width: 1;
