--- a/src/main/resources/templates/dc.xml
+++ b/src/main/resources/templates/dc.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 
-<simpledc>
+<simpledc xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:noNamespaceSchemaLocation="../schemas/dc.xsd">
 
     <type>{{level}}</type>
     <title>{{title}}</title>
