--- a/src/main/resources/templates/dc.xml
+++ b/src/main/resources/templates/dc.xml
@@ -3,7 +3,7 @@
 <simpledc xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="../schemas/dc.xsd">
 
-    <type>{{level}}</type>
+    <creatorOption>{{level}}</creatorOption>
     <title>{{title}}</title>
     <identifier>{{id}}</identifier>
     <creator>{{creator}}</creator>
