Updated the templates

--- a/src/main/resources/templates/dc.xml
+++ b/src/main/resources/templates/dc.xml
@@ -3,13 +3,13 @@
 <simpledc xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="../schemas/dc.xsd">
 
-    <creatorOption>{{level}}</creatorOption>
-    <title>{{title}}</title>
-    <identifier>{{id}}</identifier>
+    <creatorOption>{{level order=4 type='list' list='[fonds,subfonds,series,subseries,file,item]'}}</creatorOption>
+    <title>{{title order=3}}</title>
+    <identifier>{{id order=2}}</identifier>
     <creator>{{creator}}</creator>
-    <date>{{dateInitial}}</date>
-    <date>{{dateFinal}}</date>
-    <description>{{description}}</description>
+    <date>{{dateInitial type='date'}}</date>
+    <date>{{dateFinal type='date'}}</date>
+    <description>{{description type='text-area'}}</description>
     <publisher>{{producer}}</publisher>
     <rights>{{rights}}</rights>
     <language>{{language}}</language>
