Fixed bug where description levels were not removed.

--- a/src/main/resources/templates/ead2002.xml
+++ b/src/main/resources/templates/ead2002.xml
@@ -8,7 +8,7 @@
         </eadid>
         <filedesc>
             <titlestmt>
-                <titleproper>{{title}}</titleproper>
+                <titleproper>{{title order=1}}</titleproper>
             </titlestmt>
         </filedesc>
 
