--- a/src/main/resources/templates/ead3.xml
+++ b/src/main/resources/templates/ead3.xml
@@ -2,10 +2,10 @@
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://ead3.archivists.org/schema/ ../schemas/ead3.xsd">
     <control>
-        <recordid>{{id order=2}}</recordid>
+        <recordid>{{id order=2 auto-generate='id'}}</recordid>
         <filedesc>
             <titlestmt>
-                <titleproper>{{title order=3}}</titleproper>
+                <titleproper>{{title order=3 auto-generate='title'}}</titleproper>
             </titlestmt>
         </filedesc>
         <maintenancestatus value="new"/>
@@ -16,7 +16,8 @@
         <maintenancehistory>
             <maintenanceevent>
                 <eventtype value="created"/>
-                <eventdatetime standarddatetime="{{now order=1 type='date'}}">{{now}}</eventdatetime>
+                <eventdatetime standarddatetime="{{now order=1 type='date' auto-generate='now'}}">{{now}}
+                </eventdatetime>
                 <agenttype value="machine"/>
                 <agent>RODA-in version 2</agent>
                 <eventdescription>Creation of EAD record using RODA-in version 2</eventdescription>
@@ -24,7 +25,8 @@
         </maintenancehistory>
     </control>
 
-    <archdesc level="{{level order=4 type='list' list='[fonds,subfonds,series,subseries,file,item]'}}">
+    <archdesc
+            level="{{level order=4 type='list' list='[fonds,subfonds,series,subseries,file,item]' auto-generate='level'}}">
         <did>
             <unitid>{{id}}</unitid>
             <unittitle>{{title}}</unittitle>
@@ -49,7 +51,7 @@
             </origination>
 
             <langmaterial>
-                <language>{{language}}</language>
+                <language>{{language auto-generate='language'}}</language>
             </langmaterial>
 
         </did>
