--- a/src/main/resources/templates/dc.xml
+++ b/src/main/resources/templates/dc.xml
@@ -3,11 +3,11 @@
 <simpledc xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="../schemas/dc.xsd">
 
-    <title>{{title order=3 auto-generate='title'}}</title>
-    <identifier>{{id order=2 auto-generate='id'}}</identifier>
+    <title>{{title order=2 auto-generate='title'}}</title>
+    <identifier>{{id order=1 auto-generate='id'}}</identifier>
     <creator>{{creator}}</creator>
-    <date>{{dateInitial type='date'}}</date>
-    <date>{{dateFinal type='date'}}</date>
+    <date>{{dateInitial order=3 type='date'}}</date>
+    <date>{{dateFinal order=4 type='date'}}</date>
     <description>{{description type='text-area'}}</description>
     <publisher>{{producer}}</publisher>
     <rights>{{rights}}</rights>
