--- a/src/main/resources/templates/ead3.xml
+++ b/src/main/resources/templates/ead3.xml
@@ -1,68 +1,71 @@
+{{~field name="id" 			order='1' auto-generate='id' xpath="//*:recordid/string() ##%## //*:unitid/string()"~}}
+{{~field name="title" 		order='2' auto-generate='title' xpath="//*:titleproper/string() ##%## //*:unittitle/string()"~}}
+{{~field name="descDate" 	order="3" type="date" auto-generate="now" xpath="//*:eventdatetime/@standardtime/string() ##%## //*:eventdatetime/string()"~}}
+{{~field name="dateInitial" order="4" type="date" xpath="//*:fromdate/@standarddate/string() ##%## //*:fromdate/string()"~}}
+{{~field name="dateFinal" 	order="5" type="date" xpath="//*:todate/@standarddate/string() ##%## //*:todate/string()"~}}
+{{~field name="level" 		order="6" type="list" list="[\"fonds\",\"subfonds\",\"series\",\"subseries\",\"file\",\"item\"]" auto-generate="level" xpath="//*:archdesc/@level/string()"~}}
+{{~field name="producer" 	xpath="//*:agencyname/string() ##%## //*:origination[@label='producer']/*:corpname/*:part/string()"~}}
+{{~field name="creator" 	xpath="//*:origination[@label='producer']/*:corpname/*:part/string()"~}}
+{{~field name="language" 	auto-generate='language' xpath="//*:language/string()"~}}
+{{~field name="description" type='text-area' xpath="//*:scopecontent/*:p/string()"~}}
+{{~field name="rights" 		xpath="//*:userestrict/*:p/string()"~}}
 <ead xmlns="http://ead3.archivists.org/schema/"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://ead3.archivists.org/schema/ ../schemas/ead3.xsd">
-    <control>
-        <recordid>{{id order=1 auto-generate='id'}}</recordid>
-        <filedesc>
-            <titlestmt>
-                <titleproper>{{title order=2 auto-generate='title'}}</titleproper>
-            </titlestmt>
-        </filedesc>
-        <maintenancestatus value="new"/>
-        <maintenanceagency>
-            <agencyname>{{producer}}</agencyname>
-        </maintenanceagency>
+	<control>
+		<recordid>{{id}}</recordid>
+		<filedesc>
+			<titlestmt>
+				<titleproper>{{title}}</titleproper>
+			</titlestmt>
+		</filedesc>
+		<maintenancestatus value="new"/>
+		<maintenanceagency>
+			<agencyname>{{producer}}</agencyname>
+		</maintenanceagency>
+		<maintenancehistory>
+			<maintenanceevent>
+				<eventtype value="created"/>
+				<eventdatetime standarddatetime='{{descDate}}'>{{descDate}}
+				</eventdatetime>
+				<agenttype value="machine"/>
+				<agent>RODA version 2</agent>
+				<eventdescription>Creation of EAD record using RODA version 2</eventdescription>
+			</maintenanceevent>
+		</maintenancehistory>
+	</control>
+	<archdesc
+		level='{{level}}'>
+		<did>
+			<unitid>{{id}}</unitid>
+			<unittitle>{{title}}</unittitle>
 
-        <maintenancehistory>
-            <maintenanceevent>
-                <eventtype value="created"/>
-                <eventdatetime standarddatetime="{{descDate order=3 type='date' auto-generate='now'}}">{{descDate}}
-                </eventdatetime>
-                <agenttype value="machine"/>
-                <agent>RODA-in version 2</agent>
-                <eventdescription>Creation of EAD record using RODA-in version 2</eventdescription>
-            </maintenanceevent>
-        </maintenancehistory>
-    </control>
-
-    <archdesc
-            level="{{level order=6 type='list' list='[fonds,subfonds,series,subseries,file,item]' auto-generate='level'}}">
-        <did>
-            <unitid>{{id}}</unitid>
-            <unittitle>{{title}}</unittitle>
-
-            <unitdatestructured calendar="gregorian">
-                <daterange>
-                    <fromdate standarddate="{{dateInitial order=4 type='date'}}">{{dateInitial}}</fromdate>
-                    <todate standarddate="{{dateFinal order=5 type='date'}}">{{dateFinal}}</todate>
-                </daterange>
-            </unitdatestructured>
-
-            <origination label="producer">
-                <corpname>
-                    <part>{{producer}}</part>
-                </corpname>
-            </origination>
-
-            <origination label="creator">
-                <persname>
-                    <part>{{creator}}</part>
-                </persname>
-            </origination>
-
-            <langmaterial>
-                <language>{{language auto-generate='language'}}</language>
-            </langmaterial>
-
-        </did>
-
-        <scopecontent>
-            <p>{{description type='text-area'}}</p>
-        </scopecontent>
-
-        <userestrict>
-            <p>{{rights}}</p>
-        </userestrict>
-    </archdesc>
+			<unitdatestructured calendar="gregorian">
+				<daterange>
+					<fromdate standarddate='{{dateInitial}}'>{{dateInitial}}</fromdate>
+					<todate standarddate='{{dateFinal}}'>{{dateFinal}}</todate>
+				</daterange>
+			</unitdatestructured>
+			<origination label="producer">
+				<corpname>
+					<part>{{producer}}</part>
+				</corpname>
+			</origination>
+			<origination label="creator">
+				<persname>
+					<part>{{creator}}</part>
+				</persname>
+			</origination>
+			<langmaterial>
+				<language>{{language}}</language>
+			</langmaterial>
+		</did>
+		<scopecontent>
+			<p>{{description}}</p>
+		</scopecontent>
+		<userestrict>
+			<p>{{rights}}</p>
+		</userestrict>
+	</archdesc>
 
 </ead>
