--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -102,6 +102,14 @@
     -fx-text-fill: white;
 }
 
+.helpToken {
+    -fx-background-color: transparent;
+}
+
+.helpToken:hover {
+    -fx-background-color: rgba(211, 211, 211, 0.35);
+}
+
 .helpToken .label{
     -fx-max-width: 400px;
     -fx-text-fill: black;
