--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -104,6 +104,9 @@
 
 .helpToken {
     -fx-background-color: transparent;
+    -fx-border-radius: 0;
+    -fx-border-width: 0;
+    -fx-padding: 0 0.15em 0 0.15em;
 }
 
 .helpToken:hover {
