Changed the popover of the help tokens to a webview. Updated the existing help texts to HTML.

--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -113,8 +113,9 @@
     -fx-background-color: rgba(211, 211, 211, 0.35);
 }
 
-.helpTokenPopOver .label{
-    -fx-max-width: 400px;
+.helpTokenPopOver .web-view{
+    -fx-max-width: 600px;
+    -fx-max-height: 400px;
     -fx-text-fill: black;
     -fx-font-weight: lighter;
 }
