Added a help page with all of the help messages. Fixes #192

--- a/src/main/resources/css/modal.css
+++ b/src/main/resources/css/modal.css
@@ -110,3 +110,8 @@
 .list-cell .combo-box {
     -fx-border-color: -fx-dark;
 }
+
+/* Help menu */
+.help-menu{
+    -fx-background-color: rgba(239, 239, 239, 0.91);
+}
