--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -183,6 +183,7 @@
 
 .tooltip {
     -fx-font-size: 1em;
+    -fx-font-weight: normal;
     -fx-text-fill: black;
     -fx-background-color: rgba(255, 255, 255, 0.92);
     -fx-background-radius: 6px;
