--- a/src/main/resources/templates/ead2002DGLAB.xml.hbs
+++ b/src/main/resources/templates/ead2002DGLAB.xml.hbs
@@ -1,8 +1,7 @@
 {{~field name="identityArea"			order="10" type="separator" order="1" labeli18n="crosswalks.dissemination.html.ead.identityarea" label="{\"en\": \"Identity\", \"pt\": \"Identificação\"}"~}}
 {{~field name="id"						order="20" auto-generate="id" labeli18n="crosswalks.dissemination.html.ead.reference" label="{\"en\": \"Identifier\", \"pt\": \"Identificador\"}" xpath="/*:ead/*:archdesc/*:did/*:unitid/string()"~}}
-{{~field name="level" 					order="25" type="list" value="fonds" options="[\"fonds\",\"class\",\"collection\",\"recordgrp\",\"subgrp\",\"subfonds\",\"series\",\"subseries\",\"file\",\"item\"]" optionsLabels="{\"fonds\": {\"en\":\"Fonds\", \"pt\":\"Fundo\"},\"class\": {\"en\":\"Class\", \"pt\":\"Classe\"},\"collection\": {\"en\":\"Collection\", \"pt\":\"Coleção\"},\"recordgrp\": {\"en\":\"Record group\", \"pt\":\"Grupo de registos\"},\"subgrp\": {\"en\":\"Subgroup\", \"pt\":\"Subgrupo\"},\"subfonds\": {\"en\":\"Subfonds\", \"pt\":\"Subfundo\"},\"series\": {\"en\":\"Series\", \"pt\":\"Série\"},\"subseries\": {\"en\":\"Subseries\", \"pt\":\"Subsérie\"},\"file\": {\"en\":\"File\", \"pt\":\"Documento composto\"},\"item\": {\"en\":\"Item\", \"pt\":\"Documento simples\"}}" optionsLabelI18nKeyPrefix="crosswalks.dissemination.html.ead.level" auto-generate="level" label="{\"i18n\": \"crosswalks.dissemination.html.ead.level\", \"en\": \"Description level\", \"pt\": \"Nível descritivo\"}" xpath="//*:archdesc/@level/string()" ~}}
-{{~field name="otherlevel" 				hidden="true" order="90" labeli18n="crosswalks.dissemination.html.ead.otherlevel" label="{\"en\": \"Other level\", \"pt\": \"Outro nível\"}" xpath="/*:ead/*:archdesc/@otherlevel/string()"~}}
-{{~field name="title"       			order="30" auto-generate='title' labeli18n="crosswalks.dissemination.html.ead.title" label="{\"en\": \"Title\", \"pt\": \"Título\"}" xpath="/*:ead/*:archdesc/*:did/*:unittitle/string()"~}}
+{{~field name="level" 					order="25" type="list" value="fonds" options="[\"P\",\"F\",\"SF\",\"SSF\",\"CL\",\"SCL\",\"SSCL\",\"SC\",\"SSC\",\"SSSC\",\"SR\",\"SSR\",\"SSSR\",\"UI\",\"SUI\",\"SSUI\",\"AG\",\"DC\",\"D\"]" optionsLabelI18nKeyPrefix="level" auto-generate="level" label="{\"i18n\": \"crosswalks.dissemination.html.ead.level\", \"en\": \"Description level\", \"pt\": \"Nível descritivo\"}" xpath="//*:archdesc/@otherlevel/string()" ~}}
+{{~field name="title"       			mandatory="true" order="30" auto-generate='title' labeli18n="crosswalks.dissemination.html.ead.title" label="{\"en\": \"Title\", \"pt\": \"Título\"}" xpath="/*:ead/*:archdesc/*:did/*:unittitle/string()"~}}
 {{~field name="dateInitial" 			order="40" type="date" label="{\"i18n\": \"crosswalks.dissemination.html.ead.initialdate\", \"en\": \"Initial date\", \"pt\": \"Data de início\"}" xpath="/*:ead/*:archdesc/*:did/*:unitdate[@label='UnitDateInitial']/@normal/string() ##%## tokenize(/*:ead/*:archdesc/*:did/*:unitdate[@label='UnitDates']/@normal/string(), \"/\")[1]"~}}
 {{~field name="dateFinal"   			order="50" type="date" label="{\"i18n\": \"crosswalks.dissemination.html.ead.finaldate\", \"en\": \"Final date\", \"pt\": \"Data de fim\"}" xpath="/*:ead/*:archdesc/*:did/*:unitdate[@label='UnitDateFinal']/@normal/string() ##%## tokenize(/*:ead/*:archdesc/*:did/*:unitdate[@label='UnitDates']/@normal/string(), \"/\")[2]"~}}
 {{~field name="descDate"   				order="60" type="text" label="{\"i18n\": \"crosswalks.dissemination.html.ead.unitdate\", \"en\": \"Descriptive date\", \"pt\": \"Data descritiva\"}" xpath="/*:ead/*:archdesc/*:did/*:unitdate/string()"~}}
@@ -51,7 +50,6 @@
 {{~field name="descriptionControlArea" 	order="440" type="separator" labeli18n="crosswalks.dissemination.html.ead.descriptioncontrolarea" label="{\"en\": \"Description control area\", \"pt\": \"Controlo da descrição\"}"~}}
 {{~field name="rules" 					order="450" type="text-area" labeli18n="crosswalks.dissemination.html.ead.rules" label="{\"en\": \"Rules or conventions\", \"pt\": \"Regras ou convenções\"}" xpath="/*:ead/*:eadheader/*:profiledesc/*:descrules/string()"~}}
 {{~field name="statusDescription"		order="470" type="list" value="final" options="[\"final\",\"revised\",\"draft\"]" optionsLabels="{\"final\": {\"en\":\"Final\", \"pt\":\"Final\"},\"revised\": {\"en\":\"Revised\", \"pt\":\"Verificado\"},\"draft\": {\"en\":\"Draft\", \"pt\":\"Rascunho\"}}" optionsLabelI18nKeyPrefix="crosswalks.dissemination.html.ead.statusDescription" label="{\"en\": \"Status description\", \"pt\": \"Estado da descrição\"}" xpath="/*:ead/*:archdesc/*:odd[@type='statusDescription']/*:p/string()" ~}}
-
 {{~field name="levelOfDetail" 			order="480" type="list" value="minimal" options="[\"full\",\"partial\",\"minimal\"]" optionsLabels="{\"full\": {\"en\":\"Full\", \"pt\":\"Completo\"}, \"partial\": {\"en\":\"Partial\", \"pt\":\"Parcial\"}, \"minimal\": {\"en\":\"Minimal\", \"pt\":\"Mínimo\"}}" optionsLabelI18nKeyPrefix="crosswalks.dissemination.html.ead.levelOfDetail" label="{\"en\": \"Level of detail\", \"pt\": \"Nível de detalhe\"}" xpath="/*:ead/*:archdesc/*:odd[@type='levelOfDetail']/*:p/string()" ~}}
 {{~field name="processDates" 			order="490" type="date" auto-generate="now" labeli18n="crosswalks.dissemination.html.ead.processdates" label="{\"en\": \"Date of creation or revision\", \"pt\": \"Data de criação ou revisão\"}" xpath="/*:ead/*:archdesc/*:processinfo/*:p/*:date/string()[normalize-space()]"~}}
 {{~field name="sources" 				order="500" type="text-area" labeli18n="crosswalks.dissemination.html.ead.sources" label="{\"en\": \"Sources\", \"pt\": \"Fontes\"}" xpath="/*:ead/*:archdesc/*:did/*:note[@type='sourcesDescription']/string()"~}}
@@ -76,12 +74,12 @@
 			{{~/if~}}
 		</profiledesc>
 	</eadheader>
-  <archdesc {{#if level}}level='{{level}}'{{/if}} {{#if otherlevel}}otherlevel="{{otherlevel}}"{{/if}}>
+  <archdesc {{#if level}}level='otherlevel' otherlevel='{{level}}'{{/if}}>
     <did>
     	{{~#if title~}}
       	<unittitle {{#if titleType}}type="{{titleType}}"{{/if}}>{{title}}</unittitle>
       	{{~/if~}}
-      	{{~#if title~}}
+      	{{~#if id~}}
       	<unitid {{#if countryCode}}countrycode="{{countryCode}}"{{/if}} {{#if repositoryCode}}repositorycode="{{repositoryCode}}"{{/if}}>{{id}}</unitid>
       	{{~/if~}}
 		{{~#if dateInitial~}}
