Fixed content-menu bug (WHITE)

--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -352,4 +352,21 @@
     -fx-background-color: transparent;
 }
 
+.root {
+  -fx-background-color: white; 
+  -fx-padding: 10;
+}
 
+.context-menu {
+  -fx-background-color: white;
+  -fx-text-fill: white;
+  -fx-cursor: hand;
+}
+
+.menu-item .label {
+  -fx-text-fill: black;
+}
+
+.menu-item:focused .label {
+  -fx-text-fill: white;
+}
