--- a/src/main/resources/css/mainWindow.css
+++ b/src/main/resources/css/mainWindow.css
@@ -26,11 +26,14 @@
 /* Inspection */
 .inspectionPart {
     -fx-border-width: 1;
-    -fx-border-color: -fx-dark;
+    -fx-border-color: -fx-alt-dark;
 }
 
 .inspectionPart .hbox {
-    -fx-background-color: -fx-dark;
+    -fx-background-color: -fx-alt-dark;
+}
+.exportPanel {
+    -fx-background: -fx-medium;
 }
 .error{
 	-fx-text-fill: red;
