--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -1,4 +1,5 @@
 * {
+	-fx-darker: #0773a6;
     -fx-dark: #089de3;
     -fx-medium: #5bbeff;
     -fx-light: #9ad1f5;
@@ -44,6 +45,7 @@
     -fx-background-color: -fx-dark;
     -fx-padding: 0.333333em 0.666667em 0.416667em 0.666667em; /* 4 8 5 8 */
     -fx-text-fill: white;
+    -fx-cursor: hand;
 }
 
 .button .text {
@@ -65,6 +67,34 @@
 
 .button-secondary:hover {
     -fx-background-color: -fx-light;
+}
+
+.dark-button {
+    -fx-background-color: -fx-alt-dark;
+    -fx-cursor: hand;
+}
+.dark-button:hover {
+    -fx-background-color: -fx-alt-light;
+    -fx-text-fill: -fx-alt-dark !important;
+}
+
+.dark-button:pressed {
+    -fx-background-color: -fx-alt-light;
+}
+.export-button {
+    -fx-background-color: -fx-darker;
+    -fx-padding: 0.333333em 0.666667em 0.416667em 0.666667em; /* 4 8 5 8 */
+    -fx-text-fill: white;
+    -fx-cursor: hand;
+}
+.export-button:hover {
+    -fx-background-color: -fx-medium;
+    -fx-text-fill: white;
+}
+
+.export-button:pressed {
+    -fx-background-color: -fx-medium;
+    -fx-text-fill: white;
 }
 
 /* Help */
@@ -178,6 +208,8 @@
 .menu-item:hover {
     -fx-background-color: -fx-dark;
 }
+
+
 
 /* Tooltip */
 
