--- a/src/main/resources/templates/key-value.xml.hbs
+++ b/src/main/resources/templates/key-value.xml.hbs
@@ -1,7 +1,7 @@
-{{~field name="id" 		auto-generate="id" label="{\"en\": \"ID\"}" xpath="//*:field[@name='id']/string()"~}}
-{{~field name="title" 	label="{\"en\": \"Title\"}" auto-generate="title" xpath="//*:field[@name='title']/string()"~}}
-{{~field name="user" 	label="{\"en\": \"Producer\"}" xpath="//*:field[@name='producer']/string()"~}}
-{{~field name="date" 	type="date" label="{\"en\": \"Date\"}" auto-generate="now" xpath="//*:field[@name='date']/string()"~}}
+{{~field name="id" 		auto-generate="id" label="{\"en\": \"ID\",\"pt\": \"Identificador\"}" xpath="//*:field[@name='id']/string()"~}}
+{{~field name="title" 	label="{\"en\": \"Title\",\"pt\": \"Título\"}" auto-generate="title" xpath="//*:field[@name='title']/string()"~}}
+{{~field name="user" 	label="{\"en\": \"Producer\",\"pt\": \"Produtor\"}" xpath="//*:field[@name='producer']/string()"~}}
+{{~field name="date" 	type="date" label="{\"en\": \"Date\",\"pt\": \"Data\"}" auto-generate="now" xpath="//*:field[@name='date']/string()"~}}
 <?xml version="1.0" encoding="utf-8" ?>
 <metadata>
 	<field name="id">{{id}}</field>
