fixes #246 by adding text to the left of the button
fixes #246 by adding text to the button

fixes #253 by adding the hungarian sip to the dropdown

progress on #250 (GUI part)

sip names are created using sip naming strategies that are specific to each SIP type; sip naming parameters are saved to the config file and loaded as default values in the create SIP form

fixes #246 according to suggestions

serial number is now correctly saved&loaded from config; fixed toggle buttons design

adds minimal panel that allows setting METS Header options. set up transition between the first and second panels

create a METS Header form from configuration options

focus next textfield when removing a field; focus new field when added; use correct styling for groups with only one field

improved design, completed i18n, moved CSS classnames to constants, made it possible to use a combo box to limit the values that can be chosen for an altrecordid value

saves and loads METS Header state (state is associated with a specific SIP type)

fixed english i18n for the hungarian sip; added hungarian translations for the hungarian sip

--- a/src/main/resources/css/modal.css
+++ b/src/main/resources/css/modal.css
@@ -119,3 +119,58 @@
 .help-menu{
     -fx-background-color: rgba(239, 239, 239, 0.91);
 }
+
+/* METS Form */
+.mets-header-section {
+    -fx-background-color: -fx-medium;
+
+    /*-fx-border-color: black;*/
+    /*-fx-border-radius: 2px;*/
+    /*-fx-border-width: 1px;*/
+
+    -fx-background-radius: 2px;
+    -fx-background-insets: 0;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 3, 0.0, 0, 2);
+}
+
+.mets-header-section-title {
+    -fx-font-size: large;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.mets-header-group {
+    -fx-padding: 10 10 10 10;
+    /*-fx-border-width: 0 0 1 0;*/
+    /*-fx-border-color: transparent transparent -fx-alt-light transparent;*/
+}
+
+.mets-header-group-last {
+    -fx-padding: 10 10 5 10;
+    -fx-border-width: 0;
+    -fx-border-color: transparent;
+}
+
+/* an item that has more items in the same group */
+.mets-item-with-siblings {
+    -fx-padding: 5 0 5 0;
+}
+
+/* an item that is the only item in the group */
+.mets-item-without-siblings {
+    -fx-padding: 0;
+}
+
+.mets-item-multiple-fields {
+    -fx-border-width: 0 0 0 3;
+    -fx-padding: 0 0 0 100;
+    -fx-border-color: transparent transparent transparent -fx-light;
+}
+
+.mets-item-with-siblings.mets-item-multiple-fields{
+    -fx-padding: 5 0 5 10;
+}
+
+.mets-item-without-siblings.mets-item-multiple-fields{
+    -fx-padding: 0 0 0 10;
+}
