--- a/src/main/resources/css/shared.css
+++ b/src/main/resources/css/shared.css
@@ -72,10 +72,10 @@
 .dark-button {
     -fx-background-color: -fx-alt-dark;
     -fx-cursor: hand;
+    -fx-text-fill: white;
 }
 .dark-button:hover {
     -fx-background-color: -fx-alt-light;
-    -fx-text-fill: -fx-alt-dark !important;
 }
 
 .dark-button:pressed {
@@ -185,6 +185,10 @@
 
 .combo-box .arrow {
     -fx-background-color: white;
+}
+
+.combo-box-popup .list-cell:disabled  {
+    -fx-opacity: 0.4 ;
 }
 
 /* Menu */
