--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,9 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
-
     <header class="page-header" role="banner">
       <h1 style="display: none" class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <img src="/images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;">
