Minor change to jekyll layout to add white space after font-awesome icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
       <h1 style="display: none" class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <img src="/images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;">
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://github.com/keeps/roda-in/releases/latest" class="btn"><i class="fa fa-download" aria-hidden="true"></i>Download latest release</a>
-      <a href="https://github.com/keeps/roda-in" class="btn"><i class="fa fa-github" aria-hidden="true"></i>Inspect source code</a>
+      <a href="https://github.com/keeps/roda-in/releases/latest" class="btn"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;Download latest release</a>
+      <a href="https://github.com/keeps/roda-in" class="btn"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;Inspect source code</a>
     </header>
 
     <main id="content" class="main-content" role="main">
